force-app/main/default/objects/Subscriber__c/fields/Churn__c.field-meta.xml
<CustomField>
    <fullName>Churn__c</fullName>
    <label>Churn</label>
    <length>5</length>
    <type>Text</type>
</CustomField>