force-app/main/default/objects/Subscriber__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <length>20</length>
    <type>Text</type>
</CustomField>