force-app/main/default/objects/Subscriber__c/fields/Dependents__c.field-meta.xml
<CustomField>
    <fullName>Dependents__c</fullName>
    <label>Dependents</label>
    <length>5</length>
    <type>Text</type>
</CustomField>