force-app/main/default/objects/Subscriber__c/fields/Device_Protection__c.field-meta.xml
<CustomField>
    <fullName>Device_Protection__c</fullName>
    <label>Device Protection</label>
    <length>30</length>
    <type>Text</type>
</CustomField>