force-app/main/default/objects/Subscriber__c/fields/Internet_Service__c.field-meta.xml
<CustomField>
    <fullName>Internet_Service__c</fullName>
    <label>Internet Service</label>
    <length>20</length>
    <type>Text</type>
</CustomField>