force-app/main/default/objects/Subscriber__c/fields/Leased_Modem__c.field-meta.xml
<CustomField>
    <fullName>Leased_Modem__c</fullName>
    <label>Leased Modem</label>
    <length>5</length>
    <type>Text</type>
</CustomField>