force-app/main/default/objects/Subscriber__c/fields/Modem_Age__c.field-meta.xml
<CustomField>
    <fullName>Modem_Age__c</fullName>
    <label>Modem Age</label>
    <length>20</length>
    <type>Text</type>
</CustomField>