force-app/main/default/objects/Subscriber__c/fields/Monthly_Charges__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Charges__c</fullName>
    <label>Monthly Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>