force-app/main/default/objects/Subscriber__c/fields/Multiple_Lines__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Lines__c</fullName>
    <label>Multiple Lines</label>
    <length>20</length>
    <type>Text</type>
</CustomField>