force-app/main/default/objects/Subscriber__c/fields/Online_Backup__c.field-meta.xml
<CustomField>
    <fullName>Online_Backup__c</fullName>
    <label>Online Backup</label>
    <length>30</length>
    <type>Text</type>
</CustomField>