force-app/main/default/objects/Subscriber__c/fields/Online_Security__c.field-meta.xml
<CustomField>
    <fullName>Online_Security__c</fullName>
    <label>Online Security</label>
    <length>30</length>
    <type>Text</type>
</CustomField>