force-app/main/default/objects/Subscriber__c/fields/Paperless_Billing__c.field-meta.xml
<CustomField>
    <fullName>Paperless_Billing__c</fullName>
    <label>Paperless Billing</label>
    <length>5</length>
    <type>Text</type>
</CustomField>