force-app/main/default/objects/Subscriber__c/fields/Phone_Service__c.field-meta.xml
<CustomField>
    <fullName>Phone_Service__c</fullName>
    <label>Phone Service</label>
    <length>5</length>
    <type>Text</type>
</CustomField>