force-app/main/default/objects/Subscriber__c/fields/Senior_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Senior_Citizen__c</fullName>
    <label>Senior Citizen</label>
    <length>5</length>
    <type>Text</type>
</CustomField>