force-app/main/default/objects/Subscriber__c/fields/Streaming_Movies__c.field-meta.xml
<CustomField>
    <fullName>Streaming_Movies__c</fullName>
    <label>Streaming Movies</label>
    <length>30</length>
    <type>Text</type>
</CustomField>