force-app/main/default/objects/Subscriber__c/fields/Streaming_TV__c.field-meta.xml
<CustomField>
    <fullName>Streaming_TV__c</fullName>
    <label>Streaming TV</label>
    <length>30</length>
    <type>Text</type>
</CustomField>