force-app/main/default/objects/Subscriber__c/fields/Tech_Support__c.field-meta.xml
<CustomField>
    <fullName>Tech_Support__c</fullName>
    <label>Tech Support</label>
    <length>30</length>
    <type>Text</type>
</CustomField>