force-app/main/default/objects/Subscriber__c/fields/Tenure_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Explanation__c</fullName>
    <label>Tenure Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>