force-app/main/default/objects/Subscriber__c/fields/Tenure_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Outcome__c</fullName>
    <label>Tenure Outcome</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>