force-app/main/default/objects/Subscriber__c/fields/Tenure_Prescription__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Prescription__c</fullName>
    <label>Tenure Prescription</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>