force-app/main/default/objects/Subscriber__c/listViews/Cancelled_Subscribers.listView-meta.xml
<ListView>
    <fullName>Cancelled_Subscribers</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Churn__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Cancelled Subscribers</label>
</ListView>